<resources>
    <string name="app_name">CHYME</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_timer">00:00</string>
    <string name="chyme">Chyme</string>
    <string name="enter">Enter</string>
    <string name="mood">Mood</string>
    <string name="duration">Duration</string>
    <string name="visual">Visual</string>
    <string name="begin">Begin</string>

    <string-array name="sounds_array">
        <item>Wind Chimes</item>
        <item>Oceanfront</item>
        <item>Forest Canopy</item>
        <item>Deep Space</item>
        <item>Rainstorm</item>
        <item>White Noise</item>
    </string-array>

    <string-array name="duration_array">
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>15 Minutes</item>
        <item>20 Minutes</item>
        <item>25 Minutes</item>
        <item>30 Minutes</item>
    </string-array>
</resources>